21/11/24 Se hizo cambios en models/User.cs Controllers/AuthController.cs Data/GestionEventosContext.cs Views/Auth/Login.cshtml Views/Auth/Register.cshtml appsettings.json Program.cs

--- a/gestion_eventos/appsettings.json
+++ b/gestion_eventos/appsettings.json
@@ -8,5 +8,10 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "Jwt": {
+        "Key": "Sergfmoron72164449SFM2024santacruz",
+        "Issuer": "gestion_eventos",
+        "Audience": "gestion_eventos_users"
+    }
 }
